# sdm-tools

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYTICS_GUIDE.md  BUNDLE_REFACTOR_SUMMARY.md  CHANGES.md  CURRENT_STATUS.md  FILES_CREATED_PHASE1.md  IMPLEMENTATION_SUMMARY.md  ITERATION_2_SUMMARY.md  LINTING.md  LINTING_SUMMARY.md  MIGRATION.md  NORMALIZATION_GUIDE.md  PHASE1_VALIDATION.md  PHASE2_PROGRESS.md  PHASE3_COMPLETE.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  README_SESSION_RECOVERY.md  REFACTORING_SUMMARY.md  RESOLUTION.md  SESSION_STATE.md  SESSION_SUMMARY_FINAL.md  SPRINT_VELOCITY_SETUP.md  SPRINT_VELOCITY_TROUBLESHOOTING.md  TESTING_SUMMARY.md  dev-metrics.md  export_developer_data.py  index.html  pyproject.toml  requirements.txt  sdm_tools.py  team-basic-stats-dashboard.html  team-simple-stats-dashboard.html  team-stats-dashboard.html  test_cli_phase3.py  test_normalization.py
reports-spa/: FIXES.md  README.md  index.html  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
reports-spa/src/: App.tsx  main.tsx
reports-spa/src/components/: index.ts
reports-spa/src/components/Layout/: Layout.tsx  Sidebar.tsx
reports-spa/src/data/: embeddedData.ts  types.ts
reports-spa/src/pages/: DailyActivityDashboard.tsx  DeveloperActivityDashboard.tsx  DeveloperComparisonDashboard.tsx  TeamKpiDashboard.tsx  TeamSprintDashboard.tsx
reports-spa/src/styles/: dashboard.css
sdm_tools/: analytics.py  cli.py  config.py  database.py  git.py  jira.py  repo.py  reports.py  team_filter.py  utils.py
sdm_tools/database/: __init__.py  commits.py  core.py  ingest.py  issues.py  normalize.py  queries.py  refresh.py  refresh_simple.py  reports.py  schema.py  schema_simple.py  simple_utils.py  spa_bundle_template.html  spa_components.py  sprint_metrics.py  sprints.py  standalone.py  stats.py
sdm_tools/database/normalizers/: __init__.py  developer_normalizer.py  email_normalizer.py  git_event_normalizer.py  issue_normalizer.py  jira_event_normalizer.py  sprint_normalizer.py
templates/: bundle.html.j2
templates/components/: daily-dashboard.jsx  sidebar.jsx
tests/: README.md  test_schema.py  test_sprint_metrics.py  test_utils.py
tests/test_normalizers/: test_developer_normalizer.py  test_email_normalizer.py
ux/web/: DEPRECATED.md  README.md  daily-activity-dashboard.html  developer-activity-dashboard.html  developer-comparison-dashboard.html  shared-dashboard-styles.css  sprint-activity-dashboard.html  sprint-velocity-dashboard.html  team-basic-stats-dashboard.html  team-simple-stats-dashboard.html  team-sprint-dashboard.html  team-sprint-kpi-dashboard.html
(+9 files in other folders)
